# chess

./: .gitignore  Cargo.toml  test_glyphon
agents/: Cargo.toml
agents/src/: evaluation.rs  lib.rs  minimax.rs  random.rs  search.rs  transposition.rs
chess/: Cargo.toml
chess/src/: interactive.rs  main.rs  uci.rs
core/: Cargo.toml
core/src/: fen.rs  game_state.rs  lib.rs  move_gen.rs  perft.rs  types.rs  zobrist.rs
gui/: Cargo.toml
gui/src/: board.rs  camera.rs  lib.rs  main.rs  pieces.rs  renderer.rs  shader.wgsl  sound.rs  sprite.wgsl  sprite_batch.rs  text_renderer.rs
src/: board.rs  evaluation.rs  fen.rs  game_state.rs  main.rs  move_gen.rs  perft.rs  search.rs  types.rs  uci.rs
