[package]
name = "chess-gui"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
chess-core = { path = "../core" }
pollster = "0.3"
raw-window-handle = "0.5"
wgpu = "0.19"
winit = "0.29"

[[bin]]
name = "chess-gui"
path = "src/main.rs"

[features]
default = []
