[package]
name = "chess-gui"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
chess-core = { path = "../core" }
chess-agents = { path = "../agents" }
pollster = "0.3"
raw-window-handle = "0.5"
wgpu = { version = "0.19", features = ["wgsl"] }
glyphon = "0.5"
winit = "0.29"

[[bin]]
name = "chess-gui"
path = "src/main.rs"

[features]
default = []
